# Po_core

./: # Po_core Manifesto When Pigs Fly.md  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  11人の哲学理論をPo_core上で交差させた総合考察.docx  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GRAND_ARCHITECT_ASSESSMENT.md  ISSUES.md  License.md  Makefile  NEXT_STEPS.md  PHASE_PLAN_tournament.md  PHASE_PLAN_v2.md  PROJECT_SUMMARY.md  Po_core_spec_doc_v1.0.md  QUICKSTART.md  QUICKSTART_EN.md  README.md  REPOSITORY_STRUCTURE.md  ROADMAP_FINAL_FORM.md  docker-compose.yml  philosopher module  pyproject.toml  pytest.ini  regenerate_golden.py  requirements-dev.txt  requirements.txt  setup.py  test_results_ai_rights_analysis.md  test_results_freedom_analysis.md  test_results_life_worth_living_analysis.md  test_results_technology_humanity_analysis.md  test_results_trolley_problem_analysis.md  足場確認20260219.md
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
01_specifications/: Po_core_spec_doc_v1.0_English.md  Po_core_spec_doc_v1.0_japanese.md  README_01_specifications_English.md
02_architecture/: README_02_architecture_English.md  README_02_architecture_Japanese.md
03_api/: Po_trace Event Metadata API Ver.2 Design Template.md  Po_trace_Event_Metadata_API_Ver2_設計テンプレート.md  Python FastAPI code for the Po_trace Event Metadata API Ver.2..md  README_03_api_English.md  README_03_api_Japanese.md  api_chains_API仕様書_position補完式付き.md  apichains API Specification Document (with Position Completion Expression).md  python「Po_trace Event Metadata API Ver.2 設計テンプレート（多言語・スキーマ・バージョン対応）」.md
04_modules/: README_04_modules_English.md  README_04_modules_Japanese.md
05_research/: AI_that_Chooses_to_Speak_Abstract_Philosophers_Ver3_en.md  Po_core_Academic_Paper_2026.md  Po_self_AI_付録_A2_哲学者_テンソル対応表.md  Po_self_paper_00_Abstract_and_TOC_en.md  Po_self_paper_04_Philosophy_Map_en.md  Po_self_paper_05_Viewer_Interference_en.md  Po_self_paper_06_Freedom_Ethics_Tensors_en.md  Po_self_paper_07_Persona_Tensors_and_Series_Evolution_en.md  Po_self_paper_08_Po_self_vs_LLMs_en.md  Po_self_paper_09_Applications_and_Social_Implementation_en.md  Po_self_paper_10_Future_of_Philosophical_Self_en.md  Po_self_paper_11_Full_Stack_Framework_en.md  Po_self_paper_12_Society_and_Evolution_Networks_en.md  Po_self_paper_Appendices_en.md  Po_self_論文まとめ2.md  README_05_research.md  README_05_research_en.md  Self-Descriptive Semantic Evolution AI 2.md  構造拡張を導入した再構成型AIの実装設計と定量評価　20250714.md  語ることを選ぶAI_Abstract_哲学者Ver3.md
assets/: flying_pig_anim.py
calibration/: README.md  axis_scoring_labels_sample.jsonl
docs/: CONTRIBUTING_PHILOSOPHER.md  ENGINE_TRACE_CONTRACT.md  LOCAL_LLM_GUIDE.md  MANUAL_LLM_TESTING.md  SAFETY.md  TUTORIAL.md  VISUALIZATION_GUIDE.md  X_RUNWAY.md  completion_matrix.md  manifesto_v0.5.md  philosopher_pixel_art_prompts.json  philosopher_pixel_art_prompts.md  release.md  status.md
examples/: LARGE_SCALE_PROTOTYPES.md  MEDIUM_PROTOTYPES.md  PO_PARTY.md  README.md  api_demo.py  batch_analyzer.py  enterprise_dashboard.py  full_scale_reasoning_test.py  interactive_viewer.py  llm_test_results_template.md  multi_agent_reasoning.py  multi_llm_testing.py  no_api_visualization_demo.py  philosopher_comparison.py  po_party_demo.py  po_trace_sample.json  po_trace_sample_output.txt  quick_test.py  simple_demo.py  test_20_philosophers_simple.py  viewer_demo.py  visualization_demo.py  web_api_server.py
experiments/: 20_philosophers_solarwill_prompt_BASELINE.md  20_philosophers_solarwill_prompt_WITHOUT_ethics.md  20_philosophers_solarwill_prompt_WITH_ethics.md  CHANGELOG_V3.md  EXPERIMENT_GUIDE.md  EXPERIMENT_GUIDE_V3.md  PHASE2_TEST_GUIDE.md  PHASE3_JUSTICE_TEST_GUIDE.md  README.md  README_20_Philosopher_Test.md  README_V3.md  RESULTS_TEMPLATE.md  RESULTS_TEMPLATE_JUSTICE.md  WORKFLOW_GUIDE.md  analyze_results.py  cross_llm_emergence_test.py  cross_llm_emergence_test_v2.py  cross_llm_emergence_test_v3.py  darkpattern_spec_cancel_flow.md  demo_constraint_modes.py  generate_research_data.py  phase_transition_analysis.py  philosopher_correlation_analysis.py  po_core_20_philosopher_test.py  po_core_39_philosophers_system_prompt.md  po_core_system_prompt_v1.2.md  run_20_philosophers_experiment.py  run_complete_analysis.py  run_darkpattern_review_experiment.py  run_solarwill_6mode_v2.py  run_solarwill_experiment.py  run_solarwill_quick_test.py  shuffle_manager.py  solarwill_39philosophers_ANALYSIS_REPORT_ja.md  solarwill_39philosophers_result_MEDIUM.md  solarwill_39philosophers_result_OFF.md  solarwill_39philosophers_result_STRONG.md  solarwill_6mode_protocol_v2.md  solarwill_task_card_template.md
papers/: Po_core_Academia_Paper.md  README_Solar_Will.md  Solar_Will_Ethics_Emergence.md
po-synthetic-thought-architect-lite/: README.md
scenarios/: case_001.yaml  case_001_expected.json  case_002_expected.json  case_003_expected.json  case_006_expected.json  case_009.yaml  case_009_expected.json  case_010_expected.json  case_011.yaml  case_011_expected.json  case_012.yaml  case_012_expected.json  case_013.yaml  case_013_expected.json  case_014_expected.json  case_015_expected.json  case_016.yaml  case_017.yaml  case_018.yaml  case_019.yaml  case_020.yaml  case_021.yaml  case_022.yaml  case_023.yaml
scripts/: calc_traceability_coverage.py  check_dev_dependencies.py  check_pr_governance.py  check_release_readiness.py  compare_providers.py  eval_axis_scoring_calibration.py  eval_emergence.py  export_openapi.py  export_tradeoff_map.py  generate_ts_openapi_types.py  measure_completeness.py  measure_disagreement.py  measure_reproducibility.py  measure_suppression.py  observe_device.py  phase25_reproduce.py  policy_lab.py  regenerate_golden.py  release_smoke.py  run_evaluation.py  session_replay.py  train_axis_calibration.py  train_axis_scoring_calibration.py
sessions/: session_001_expected.json
tests/: README.md  conftest.py  test_all_39_philosophers.py  test_api_auth_cors.py  test_api_surface_security_parity.py  test_arbitration_trace.py  test_auth_policy.py  test_badge_style.py  (+89 more)
(+698 files in other folders)
