[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "po-core-flyingpig"
dynamic = ["version"]
description = "AI system integrating philosophers as dynamic tensors for responsible meaning generation"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Flying Pig Project", email = "flyingpig0229+github@gmail.com"}
]
maintainers = [
    {name = "Flying Pig Project", email = "flyingpig0229+github@gmail.com"}
]
keywords = [
    "artificial-intelligence",
    "philosophy",
    "ethics",
    "pytorch",
    "tensors",
    "explainable-ai",
    "responsible-ai",
    "phenomenology",
    "existentialism",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "slowapi>=0.1.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.0",
    "scipy>=1.11.0",
    "structlog>=23.2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.26.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.18.0",
    "dash>=2.14.0",
    "networkx>=3.2.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "orjson>=3.9.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
llm = [
    "google-genai>=1.0",
    "openai>=1.0",
    "anthropic>=0.40",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black==26.1.0",
    "isort==5.13.2",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "sphinx>=7.2.0",
    "jupyter>=1.0.0",
    "pre-commit>=3.5.0",
    "bandit>=1.8.6",
    "pip-audit>=2.9.0",
    "build>=1.3.0",
    "twine>=6.2.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]
viz = [
    "seaborn>=0.13.0",
    "bokeh>=3.3.0",
]
all = [
    "google-genai>=1.0",
    "openai>=1.0",
    "anthropic>=0.40",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black==26.1.0",
    "isort==5.13.2",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "sphinx>=7.2.0",
    "jupyter>=1.0.0",
    "pre-commit>=3.5.0",
    "bandit>=1.8.6",
    "pip-audit>=2.9.0",
    "build>=1.3.0",
    "twine>=6.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "seaborn>=0.13.0",
    "bokeh>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/hiroshitanaka-creator/Po_core"
Documentation = "https://hiroshitanaka-creator.github.io/Po_core/"
Repository = "https://github.com/hiroshitanaka-creator/Po_core"
Issues = "https://github.com/hiroshitanaka-creator/Po_core/issues"
Discussions = "https://github.com/hiroshitanaka-creator/Po_core/discussions"
Changelog = "https://github.com/hiroshitanaka-creator/Po_core/blob/main/CHANGELOG.md"

[project.scripts]
po-core = "po_core.cli.commands:main"
po-self = "po_core.po_self:cli"
po-trace = "po_core.po_trace:cli"
po-interactive = "po_core.cli.interactive:main"
po-experiment = "po_core.cli.experiment:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["po_core*"]
namespaces = false


[tool.setuptools.dynamic]
version = {attr = "po_core.__version__"}

[tool.setuptools.package-data]
po_core = [
    "config/*.yaml",
    "config/*/*.yaml",
    "config/*/*/*.yaml",
    "axis/specs/*.json",
    "schemas/*.json",
    "viewer/*.html",
    "py.typed",
]

# ==================
# Black Configuration
# ==================
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ==================
# isort Configuration
# ==================
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
src_paths = ["src", "tests"]

# pytest config is defined in pytest.ini

# ==================
# Coverage Configuration
# ==================
[tool.coverage.run]
branch = true
source = ["po_core"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ==================
# MyPy Configuration
# ==================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
strict_equality = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "sentence_transformers.*",
    "torch.*",
    "scipy.*",
    "sklearn.*",
    "plotly.*",
    "fastapi.*",
    "pydantic.*",
    "pydantic_settings.*",
    "slowapi.*",
    "uvicorn.*",
    "jsonschema.*",
    "yaml.*",
    "numpy.*",
    "rich.*",
    "google.*",
    "openai.*",
    "anthropic.*",
]
ignore_missing_imports = true

# ==================
# Pylint Configuration
# ==================
[tool.pylint.main]
py-version = "3.10"
jobs = 0
suggestion-mode = true
fail-under = 8.0

[tool.pylint.messages_control]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "too-few-public-methods",  # Philosophical classes may be simple
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 8  # Philosophical tensors may need multiple parameters
max-attributes = 12

# ==================
# Bandit Configuration (Security)
# ==================
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]

# ==================
# Flying Pig Philosophy Metadata
# ==================
[tool.po_core]
philosophy = "Flying Pig Philosophy"
tenets = [
    "Hypothesize Boldly",
    "Verify Rigorously",
    "Revise Gracefully"
]
motto = "井の中の蛙、大海は知らずとも、大空を知る"
# A frog in a well may not know the ocean, but it can know the sky

[tool.po_core.project]
status = "beta"
implementation_progress = 1.0
philosophers_integrated = 42
design_documents = 120
started = "2024"

[tool.po_core.contact]
email = "flyingpig0229+github@gmail.com"
github = "https://github.com/hiroshitanaka-creator/Po_core"

[dependency-groups]
# Mirror tools/dev-requirements.txt exactly; release-readiness tests fail on drift.
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black==26.1.0",
    "isort==5.13.2",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "sphinx>=7.2.0",
    "jupyter>=1.0.0",
    "pre-commit>=3.5.0",
    "bandit>=1.8.6",
    "pip-audit>=2.9.0",
    "build>=1.3.0",
    "twine>=6.2.0",
]
